# OpenWars

./: .gitmodules  CMakeLists.txt  OW_Doxygen.conf  OpenAWars.vcproj  README.md  README_Editor.txt  TODO
Sources/: GameOption.cpp  (+2 more)
branches/NEngine/: CMakeLists.txt  NEngine_Doxygen.conf  configure.ac
branches/NEngine/Sources/: GameOption.h  globals.h
branches/NEngine/Sources/Engine/: Params.cpp  ThemeLoader.cpp  VTime.cpp
branches/NEngine/Sources/NEngine/: Bank.cpp  Exception.h  ISoundLoader.cpp  ISpriteLoader.cpp  InputManager.cpp  Semaphore.h  SoundLoader.cpp  SpriteFactory.cpp  SpriteFactory.h  SpriteLoader.h
branches/NEngine/Sources/UI/: ConstructBox.cpp  MenuBox.cpp  TileBar_template.h  UIItem.cpp  UIItem.h
branches/NEngine/Sources/XML/: XMLListReader.cpp  XMLObjectReader.h
branches/NEngine/include/NEngine/: ISoundLoader.h  ISpriteLoader.h  NEngine.h  NEngineFactory.h  NEngineFactory.hpp  Renderer.h  Sound.h  SoundEngine.h  Sprite.h  Thread.h  Time.h  Window.h
branches/NEngine/src/: Bank.cpp  ISoundLoader.cpp  InputManager.cpp  NEngine.cpp  NEngineFactory.cpp  Renderer.cpp  SoundEngine.cpp  SoundLoader.cpp  SpriteFactory.cpp  SpriteLoader.cpp
branches/NEngine/src/Types/: Colour.cpp
trunk/: CMakeLists.txt  INSTALL  Makefile_Editor  OAW_Doxygen.conf  OAW_Editor_Doxygen.conf  OpenAWars.sln  OpenAWars.vcproj  OpenAWars_Editor.vcproj  configure.ac
trunk/Sources/: ArgumentParser.cpp  ArgumentParser.h  GameOption.cpp  GameOption.h  Makefile.am  globals.h  main.cpp  main.h  main_editor.cpp  main_editor.h
trunk/Sources/Engine/: AnimatedSprite.cpp  AnimatedSprite.h  Font.cpp  Font.h  Library.cpp  Library.h  LibraryUnitTemplate_template.h  Library_template.h  Params.cpp  Params.h  Params_template.h  Properties.cpp  Properties.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Theme.cpp  Theme.h  ThemeLoader.cpp  VTime.cpp  VTime.h  Window.cpp  Window.h
trunk/Sources/Engine/Controls/: Keyboard.cpp  Keyboard.h
trunk/Sources/Engine/Renderers/: Renderer_opengl.cpp  Renderer_opengl.h  Renderer_sdl.cpp  Renderer_sdl.h
trunk/Sources/Engine/ResourcesManager/: FontManager.cpp  FontManager.h  SpriteManager.cpp  SpriteManager.h
trunk/Sources/Game/: Camera.cpp  Camera.h  Cursor.cpp  Cursor.h  EditingCursor.cpp  EditingCursor.h  EditorEngine.cpp  EditorEngine.h  Engine.cpp  Engine.h  FontObject.cpp  FontObject.h  GameEngine.cpp  GameEngine.h  GameState.h  Map.cpp  Map.h  MapEditor.cpp  MapEditor.h  MapFactory.cpp  MapFactory.h  MapGame.cpp  MapGame.h  MapLoader.cpp  MapSaver.cpp  Params.cpp  Tile.cpp  Tile.h  Unit.cpp  Unit.h  UnitTemplate.cpp  UnitTemplate.h  UnitTemplateFactionList.cpp  UnitTemplateFactionList.h
trunk/Sources/Game/GameState/: Editor.cpp  Editor.h  Game.cpp  Game.h
trunk/Sources/Game/Map/: ClassicMapIntegrityChecker.cpp  ClassicMapIntegrityChecker.h  Map.cpp  Map.h  MapFactory.cpp  MapFactory.h  MapIntegrityChecker.cpp  MapIntegrityChecker.h  MapLoader.cpp  MapLoader.h  MapSaver.h
trunk/Sources/NEngine/: Bank.cpp  Bank.h  Engine.h  Exception.h  Input.h  InputManager.cpp  InputManager.h  NE.cpp  NE.h  NETypes.h  NEngine.cpp  NEngine.h  Renderer.cpp  Renderer.h  Scaler.cpp  Scaler.h  Sound.h  SoundLoader.h  Sprite.h  SpriteFactory.cpp  SpriteFactory.h  SpriteLoader.cpp  SpriteLoader.h  Time.h  Window.h
trunk/Sources/NEngine/Exceptions/: ConstructionFailedException.h  InputNotFoundException.h
trunk/Sources/NEngine/Logging/: LoggerMessage.hpp
trunk/Sources/NEngine/Native/: NESDL.cpp  NESDL.h
trunk/Sources/NEngine/Types/: Rect.h
trunk/Sources/NEngine/Utils/: Contracts.h  LineParser.h
trunk/Sources/Types/: Colour.cpp  Colour.h  Rect.h  Size2.h  Vec2.h
trunk/Sources/UI/: ConstructBox.cpp  ConstructBox.h  MenuBox.cpp  MenuBox.h  TileBar.cpp  TileBar.h  TileBarTiles.cpp  TileBarTiles.h  TileBarUnits.cpp  TileBarUnits.h  TileBar_template.h  TileViewer.cpp  TileViewer.h  UIItem.cpp  UIItem.h  UIType.h
trunk/Sources/Utils/: LineParser.cpp  LineParser.h  Logger.cpp  Logger.h  Logger_template.hpp  Scaler.cpp  Scaler.h
trunk/Sources/Utils/Exceptions/: ConstructionFailedException.h  FileNotOpenedException.h  LibraryException.h  ParamsException.h  TileException.h  XMLException.h
trunk/Sources/XML/: XMLListReader.cpp  XMLListReader.h  XMLObjectReader.cpp  XMLObjectReader.h  XMLObjectReader_template.h  XMLReader.cpp  XMLReader.h
trunk/Sources/game/: GameOption.cpp  GameOption.h  main.cpp
trunk/Sources/game/Engine/: AnimatedSprite.cpp  AnimatedSprite.h  Font.h  LibraryUnitTemplate_template.h  Params.cpp  Params.h  Theme.cpp  ThemeLoader.cpp
trunk/data/maps/: m1.txt  m2.txt  m3.txt  m4.txt  maw.map
trunk/data/themes/: themeList.xml
trunk/data/tilesets/: classic.oawts
trunk/data/unitsets/: classic.oawus
trunk/doc/html/: _animated_sprite_8h_source.html  _camera_8h_source.html  _construct_box_8h_source.html  _cursor_8h_source.html  _editing_cursor_8h_source.html  _editor_engine_8h_source.html  _engine_8h_source.html  _file_factory_8h_source.html  _font_8h_source.html  _font_manager_8h_source.html  _game_engine_8h_source.html  _keyboard_8h_source.html  _line_parser_8h_source.html  _logger_8h_source.html  _logger__template_8hpp_source.html  _map_8h_source.html  _map_editor_8h_source.html  _renderer_8h_source.html  _renderer__opengl_8h_source.html  _renderer__sdl_8h_source.html  _scaler_8h_source.html  _sprite_8h_source.html  _sprite_manager_8h_source.html  _tile_8h_source.html  _tile_bar_8h_source.html  _tile_bar_tiles_8h_source.html  _tile_bar_units_8h_source.html  _tile_line_parser_8h_source.html  _tile_viewer_8h_source.html  _unit_8h_source.html  _unit_line_parser_8h_source.html  _v_time_8h_source.html  _vec2_8h_source.html  _window_8h_source.html  annotated.html  class_animated_sprite-members.html  class_animated_sprite.html  class_camera-members.html  class_camera.html  class_construct_box-members.html  (+104 more)
trunk/include/SDL/: SDL_config_minimal.h
trunk/include/libxml/: xmlversion.h
trunk/src/: main.cpp
trunk/src/Engine/: ThemeLoader.h
trunk/src/Game/: GameEngine.h
trunk/src/UI/: TileViewer.cpp
trunk/src/XML/: XMLReader.cpp
(+609 files in other folders)
