bin_PROGRAMS = $(top_builddir)/OpenAWars_Editor $(top_builddir)/OpenAWars
__top_builddir__OpenAWars_Editor_SOURCES = 	NEngine/Window.h NEngine/Renderer.cpp NEngine/Renderer.h NEngine/Sprite.h NEngine/InputManager.h NEngine/InputManager.cpp NEngine/Input.h NEngine/NEngine.cpp NEngine/NEngine.h NEngine/Time.h NEngine/SpriteLoader.cpp NEngine/SpriteLoader.h NEngine/SpriteFactory.cpp NEngine/SpriteFactory.h NEngine/Sound.h NEngine/SoundLoader.h \
				NEngine/Native/SDL/SDL_Window.cpp NEngine/Native/SDL/SDL_Window.h NEngine/Native/SDL/SDL_Sprite.cpp NEngine/Native/SDL/SDL_Sprite.h NEngine/Native/SDL/SDL_SpriteLoaderSDLI.cpp NEngine/Native/SDL/SDL_SpriteLoaderSDLI.h NEngine/Native/SDL/SDL_SpriteFactory.cpp NEngine/Native/SDL/SDL_SpriteFactory.h NEngine/Native/SDL/SDL_Renderer.cpp NEngine/Native/SDL/SDL_Renderer.h NEngine/Native/SDL/SDL_Joy.cpp NEngine/Native/SDL/SDL_Joy.h NEngine/Native/SDL/SDL_Keyboard.cpp NEngine/Native/SDL/SDL_Keyboard.h NEngine/Native/SDL/SDL_Time.cpp NEngine/Native/SDL/SDL_Time.h NEngine/Native/SDL/SDL_SoundLoader.cpp NEngine/Native/SDL/SDL_SoundLoader.h NEngine/Native/SDL/SDL_Engine.cpp NEngine/Native/SDL/SDL_Engine.h \
				Types/Colour.cpp Types/Colour.h \
				Engine/Library.h \
				Engine/Params.cpp Engine/Params.h \
				Engine/Theme.cpp Engine/Theme.h \
				Engine/VTime.cpp Engine/VTime.h \
				Engine/AnimatedSprite.cpp Engine/AnimatedSprite.h \
				Engine/Font.cpp Engine/Font.h \
				XML/XMLReader.cpp XML/XMLReader.h XML/XMLListReader.cpp XML/XMLListReader.h XML/XMLObjectReader.cpp XML/XMLObjectReader.h \
				Game/Map/Map.cpp Game/Map/Map.h Game/Map/MapLoader.cpp Game/Map/MapLoader.h Game/Map/MapFactory.cpp Game/Map/MapFactory.h Game/Map/MapSaver.cpp Game/Map/MapSaver.h Game/Map/MapIntegrityChecker.cpp Game/Map/MapIntegrityChecker.h Game/Map/ClassicMapIntegrityChecker.cpp Game/Map/ClassicMapIntegrityChecker.h \
				Game/Cursor.cpp Game/Cursor.h Game/EditingCursor.cpp Game/EditingCursor.h \
				Game/Camera.cpp Game/Camera.h \
				Game/Engine.cpp Game/Engine.h \
				Game/EditorEngine.cpp Game/EngitorEngine.h \
				Game/Tile.cpp Game/Tile.h \
				Game/UnitTemplate.cpp Game/UnitTemplate.h Game/UnitTemplateFactionList.cpp Game/UnitTemplateFactionList.h Game/Unit.cpp Game/Unit.h \
				Game/FontObject.cpp Game/FontObject.h \
				Utils/Logger.cpp Utils/Logger.h \
				Utils/LineParser.cpp Utils/LineParser.h \
				UI/UIItem.cpp UI/UIItem.h \
				UI/TileBar.cpp UI/TileBar.h \
				UI/TileViewer.cpp UI/TileViewer.h \
				main_editor.cpp main_editor.h globals.h
__top_builddir__OpenAWars_Editor_CPPFLAGS = -DEDITOR
__top_builddir__OpenAWars_SOURCES = 		NEngine/Window.h NEngine/Renderer.cpp NEngine/Renderer.h NEngine/Sprite.h NEngine/InputManager.h NEngine/InputManager.cpp NEngine/Input.h NEngine/NEngine.cpp NEngine/NEngine.h NEngine/Time.h NEngine/SpriteLoader.cpp NEngine/SpriteLoader.h NEngine/SpriteFactory.cpp NEngine/SpriteFactory.h NEngine/Sound.h NEngine/SoundLoader.h \
				NEngine/Native/SDL/SDL_Window.cpp NEngine/Native/SDL/SDL_Window.h NEngine/Native/SDL/SDL_Sprite.cpp NEngine/Native/SDL/SDL_Sprite.h NEngine/Native/SDL/SDL_SpriteLoaderSDLI.cpp NEngine/Native/SDL/SDL_SpriteLoaderSDLI.h NEngine/Native/SDL/SDL_SpriteFactory.cpp NEngine/Native/SDL/SDL_SpriteFactory.h NEngine/Native/SDL/SDL_Renderer.cpp NEngine/Native/SDL/SDL_Renderer.h NEngine/Native/SDL/SDL_Joy.cpp NEngine/Native/SDL/SDL_Joy.h NEngine/Native/SDL/SDL_Keyboard.cpp NEngine/Native/SDL/SDL_Keyboard.h NEngine/Native/SDL/SDL_Time.cpp NEngine/Native/SDL/SDL_Time.h NEngine/Native/SDL/SDL_SoundLoader.cpp NEngine/Native/SDL/SDL_SoundLoader.h NEngine/Native/SDL/SDL_Engine.cpp NEngine/Native/SDL/SDL_Engine.h \
				Types/Colour.cpp Types/Colour.h \
				Engine/Library.h \
				Engine/Params.cpp Engine/Params.h \
				Engine/Theme.cpp Engine/Theme.h \
				Engine/VTime.cpp Engine/VTime.h \
				Engine/AnimatedSprite.cpp Engine/AnimatedSprite.h \
				Engine/Font.cpp Engine/Font.h \
				XML/XMLReader.cpp XML/XMLReader.h XML/XMLListReader.cpp XML/XMLListReader.h XML/XMLObjectReader.cpp XML/XMLObjectReader.h \
				Game/Map/Map.cpp Game/Map/Map.h Game/Map/MapLoader.cpp Game/Map/MapLoader.h Game/Map/MapFactory.cpp Game/Map/MapFactory.h Game/Map/MapSaver.cpp Game/Map/MapSaver.h Game/Map/MapIntegrityChecker.cpp Game/Map/MapIntegrityChecker.h Game/Map/ClassicMapIntegrityChecker.cpp Game/Map/ClassicMapIntegrityChecker.h \
				Game/Cursor.cpp Game/Cursor.h \
				Game/Camera.cpp Game/Camera.h \
				Game/Engine.cpp Game/Engine.h \
				Game/GameEngine.cpp Game/GameEngine.h \
				Game/Tile.cpp Game/Tile.h \
				Game/UnitTemplate.cpp Game/UnitTemplate.h Game/UnitTemplateFactionList.cpp Game/UnitTemplateFactionList.h Game/Unit.cpp Game/Unit.h \
				Game/FontObject.cpp Game/FontObject.h \
				Utils/Logger.cpp Utils/Logger.h \
				Utils/LineParser.cpp Utils/LineParser.h \
				UI/UIItem.cpp UI/UIItem.h \
				UI/ConstructBox.cpp UI/ConstructBox.h UI/MenuBox.cpp UI/MenuBox.h \
				main.cpp main.h globals.h
__top_builddir__OpenAWars_CPPFLAGS = -DGAME
