bin_PROGRAMS = $(top_builddir)/OpenAWars
__top_builddir__OpenAWars_SOURCES = 		NEngine/Window.h NEngine/Renderer.cpp NEngine/Renderer.h NEngine/Sprite.h NEngine/InputManager.h NEngine/InputManager.cpp NEngine/Input.h NEngine/NEngine.cpp NEngine/NEngine.h NEngine/Time.h NEngine/SpriteLoader.cpp NEngine/SpriteLoader.h NEngine/SpriteFactory.cpp NEngine/SpriteFactory.h NEngine/Sound.h NEngine/SoundLoader.h \
				NEngine/Native/SDL/SDL_Window.cpp NEngine/Native/SDL/SDL_Window.h NEngine/Native/SDL/SDL_Sprite.cpp NEngine/Native/SDL/SDL_Sprite.h NEngine/Native/SDL/SDL_SpriteLoader.cpp NEngine/Native/SDL/SDL_SpriteLoader.h NEngine/Native/SDL/SDL_SpriteLoaderSDLI.cpp NEngine/Native/SDL/SDL_SpriteLoaderSDLI.h NEngine/Native/SDL/SDL_SpriteFactory.cpp NEngine/Native/SDL/SDL_SpriteFactory.h NEngine/Native/SDL/SDL_Renderer.cpp NEngine/Native/SDL/SDL_Renderer.h NEngine/Native/SDL/SDL_Joy.cpp NEngine/Native/SDL/SDL_Joy.h NEngine/Native/SDL/SDL_Keyboard.cpp NEngine/Native/SDL/SDL_Keyboard.h NEngine/Native/SDL/SDL_Time.cpp NEngine/Native/SDL/SDL_Time.h NEngine/Native/SDL/SDL_SoundLoader.cpp NEngine/Native/SDL/SDL_SoundLoader.h NEngine/Native/SDL/SDL_Engine.cpp NEngine/Native/SDL/SDL_Engine.h \
				NEngine/Exceptions/ConstructionFailedException.h NEngine/Exceptions/FileNotFoundException.h NEngine/Exceptions/InputNotFoundException.h \
				NEngine/Types/Colour.cpp NEngine/Types/Colour.h \
				Engine/Library.h Engine/Library_template.h \
				Engine/Theme.cpp Engine/Theme.h	Engine/ThemeLoader.cpp Engine/ThemeLoader.h \
				Engine/VTime.cpp Engine/VTime.h \
				Engine/AnimatedSprite.cpp Engine/AnimatedSprite.h \
				Engine/Font.cpp Engine/Font.h \
				XML/XMLReader.cpp XML/XMLReader.h XML/XMLListReader.cpp XML/XMLListReader.h XML/XMLObjectReader.cpp XML/XMLObjectReader.h \
				Game/GameEngine.cpp Game/GameEngine.h Game/GameState.cpp Game/GameState.h \
				Game/GameState/Editor.cpp Game/GameState/Editor.h Game/GameState/Game.cpp Game/GameState/Game.h \
				Game/GameState/GameObjects/Map/Map.cpp Game/GameState/GameObjects/Map/Map.h Game/GameState/GameObjects/Map/MapLoader.cpp Game/GameState/GameObjects/Map/MapLoader.h Game/GameState/GameObjects/Map/MapSaver.cpp Game/GameState/GameObjects/Map/MapSaver.h Game/GameState/GameObjects/Map/MapFactory.cpp Game/GameState/GameObjects/Map/MapFactory.h Game/GameState/GameObjects/Map/MapDrawer.cpp Game/GameState/GameObjects/Map/MapDrawer.h Game/GameState/GameObjects/Map/MapIntegrityChecker.cpp Game/GameState/GameObjects/Map/MapIntegrityChercker.h Game/GameState/GameObjects/Map/ClassicMapIntegrityChecker.cpp Game/GameState/GameObjects/Map/ClassicMapIntegrityChecker.h \
				Game/GameState/GameObjects/Map/MapMarker/MapMarker.cpp Game/GameState/GameObjects/Map/MapMarker/MapMarker.h Game/GameState/GameObjects/Map/MapMarker/GlobalAttackMapMarker.cpp Game/GameState/GameObjects/Map/MapMarker/GlobalMapMarker.h Game/GameState/GameObjects/Map/MapMarker/MovementMapMarker.cpp Game/GameState/GameObjects/Map/MapMarker/MovementMapMarker.h Game/GameState/GameObjects/Map/MapMarker/AttackMapMarker.cpp Game/GameState/GameObjects/Map/MapMarker/AttackMapMarker.h \
				Game/GameState/GameObjects/Cursor.cpp Game/GameState/GameObjects/Cursor.h Game/GameState/GameObjects/Camera.cpp Game/GameState/GameObjects/Camera.h Game/GameState/GameObjects/Tile.cpp Game/GameState/GameObjects/Tile.h Game/GameState/GameObjects/UnitTemplate.cpp Game/GameState/GameObjects/UnitTemplate.h Game/GameState/GameObjects/UnitTemplateFactionList.cpp Game/GameState/GameObjects/UnitTemplateFactionList.h Game/GameState/GameObjects/Unit.cpp Game/GameState/GameObjects/Unit.h Game/GameState/GameObjects/FontObject.cpp Game/GameState/GameObjects/FontObject.h Game/GameState/GameObjects/Money.cpp Game/GameState/GameObjects/Money.h Game/GameState/GameObjects/GameInfo.cpp Game/GameState/GameObjects/GameInfo.h \
				Game/GameState/EditorObjects/EditingCursor.cpp Game/GameState/EditorObjects/EditingCursor.h \
				Game/GameState/InGameStates/InGameState.cpp Game/GameState/InGameStates/InGameState.h Game/GameState/InGameStates/IdleIGS.cpp Game/GameState/InGameStates/IdleIGS.h Game/GameState/InGameStates/ConstructionIGS.cpp Game/GameState/InGameStates/ConstructionIGS.h Game/GameState/InGameStates/MenuIGS.cpp Game/GameState/InGameStates/MenuIGS.h Game/GameState/InGameStates/AttackMapIGS.cpp Game/GameState/InGameStates/AttackMapIGS.h Game/GameState/InGameStates/UnitSelectIGS.cpp Game/GameState/InGameStates/UnitSelectIGS.h \
				Utils/Logger.cpp Utils/Logger.h \
				Utils/LineParser.cpp Utils/LineParser.h \
				Utils/Exceptions/FileNotFoundException.h \
				UI/UIItem.cpp UI/UIItem.h \
				UI/TileBar.h UI/TileBar_template.h UI/TileViewer.h UI/TileViewer.cpp UI/OfficerBox.cpp UI/OfficerBox.h \
				UI/ConstructBox.cpp UI/ConstructBox.h UI/MenuBox.cpp UI/MenuBox.h \
				ArgumentParser.cpp ArgumentParser.h GameOption.cpp GameOption.h \
				main.cpp main.h globals.h
